fix layout profile image was overlapping on smaller screen

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,7 +158,7 @@ body {
 
 .profile-right {
   max-width: 90px;
-  max-height: 90px;
+  height: 90px;
 }
 
 .bold-name {
@@ -406,10 +406,6 @@ body {
   .logo-left {
     font-size: 1.5em;
   }
-  .profile-right {
-    max-width: 106px;
-    height: 106px;
-  }
 }
 
 @media (min-width: 768px) {
@@ -419,5 +415,9 @@ body {
   }
   .username {
     font-size: 1em;
+  }
+  .profile-right {
+    max-width: 150px;
+    height: 106px;
   }
 }
